Fri Oct 28 15:18:58 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c (FINITE_TYPE_P): extract predicate.

	* complex.c (rb_complex_finite_p, rb_complex_infinite_p): use
	  dedicated predicates instead of switch by TYPE.

Thu Oct 27 23:28:12 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_integer_type_p): turn into macro to help
	  clang based on old gcc to eliminate CSE.

Thu Oct 27 16:33:47 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb (rel): check the exception and show right
	  message.

Thu Oct 27 14:57:33 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/socket/lib/socket.rb (UDPSocket#recvfrom_nonblock): [DOC] Remove
	  a false statement "If _maxlen_ is omitted, its default value is
	  65536." maxlen, the first parameter, cannot be omitted as the method
	  signature indicates. This hasn't changed ever since it was first
	  implemented.

Thu Oct 27 09:42:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_convert_to_integer): convert a fixable float to a
	  fixnum directly without the convesion method, as well as bignum
	  case.

	* object.c (rb_convert_to_integer): should not drop the converted
	  string.

Wed Oct 26 17:09:59 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_intern): use prefixed version macro
	  RUBY_CONST_ID_CACHE.

Wed Oct 26 11:28:25 2016  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* NEWS: added several entries which (if I remember correctly) are
	  added in a year.

Tue Oct 25 12:54:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (mnew_internal): follow the original class, not to loop
	  the prepended module.  [ruby-core:77591] [Bug #12832]

Mon Oct 24 10:52:17 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/lib/test/unit.rb (Test::Unit::Parallel#deal): update the
	  job status after a task finished, to show idling workers.

Mon Oct 24 10:51:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
